--- a/package.json
+++ b/package.json
@@ -22,18 +22,20 @@
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@stripe/stripe-js": "^7.1.0",
     "@supabase/ssr": "^0.6.1",
     "@tabler/icons-react": "^3.31.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.22.0",
     "lucide-react": "^0.484.0",
-    "next": "15.2.4",
+    "next": "^15.2.4",
     "next-themes": "^0.4.6",
     "openai": "^4.89.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.1",
+    "stripe": "^18.0.0",
     "svix": "^1.63.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4"
