--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@clerk/clerk-react": "^5.25.5",
     "@clerk/nextjs": "^6.12.9",
     "@convex-dev/auth": "^0.0.81",
+    "@polar-sh/nextjs": "^0.4.0",
+    "@polar-sh/sdk": "^0.32.11",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -22,7 +24,6 @@
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
-    "@stripe/stripe-js": "^7.1.0",
     "@supabase/ssr": "^0.6.1",
     "@tabler/icons-react": "^3.31.0",
     "class-variance-authority": "^0.7.1",
@@ -35,7 +36,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.1",
-    "stripe": "^18.0.0",
     "svix": "^1.63.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4"
