--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.22.0",
     "lucide-react": "^0.484.0",
+    "motion": "^12.9.2",
     "next": "^15.2.4",
     "next-themes": "^0.4.6",
     "openai": "^4.96.0",
