--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "openai": "^4.96.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-sketch-canvas": "^6.2.0",
     "sonner": "^2.0.1",
     "svix": "^1.63.1",
     "tailwind-merge": "^3.0.2",
